cortado_core/variant_query_language/grammars/vqlParser.py
# Generated from c:\Users\49171\Desktop\cortado-core\cortado_core\variant_query_language\grammars\vql.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class vqlParser(Parser):
    grammarFileName = "vql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'('",
        "')'",
        "'ANY'",
        "'ALL'",
        "'{'",
        "'}'",
        "';'",
        "','",
        "'~'",
        "'='",
        "'<'",
        "'>'",
        "'AND'",
        "'OR'",
        "'NOT'",
        "'->'",
    ]

    symbolicNames = [
        "<INVALID>",
        "ISEVENTUALLYFOLLOWED",
        "ISDIRECTLYFOLLOWED",
        "ISCONCURRENT",
        "ISSTARTTOKEN",
        "ISENDTOKEN",
        "ISCONTAINED",
        "LPAR",
        "RPAR",
        "ANY",
        "ALL",
        "LCBRACKET",
        "RCBRACKET",
        "SEMICOLON",
        "COMMA",
        "GROUPINVERSE",
        "EQUALS",
        "LT",
        "GT",
        "AND",
        "OR",
        "NOT",
        "IMPLIES",
        "NUMBER",
        "WS",
        "ACTIVITY",
    ]

    RULE_start = 0
    RULE_query = 1
    RULE_logicBlock = 2
    RULE_bQueryOp = 3
    RULE_uQueryOp = 4
    RULE_qOp = 5
    RULE_quantifier = 6
    RULE_expression = 7
    RULE_leaf = 8
    RULE_implyBlock = 9
    RULE_impliesClause = 10
    RULE_dnfClause = 11
    RULE_cnfClause = 12
    RULE_group = 13

    ruleNames = [
        "start",
        "query",
        "logicBlock",
        "bQueryOp",
        "uQueryOp",
        "qOp",
        "quantifier",
        "expression",
        "leaf",
        "implyBlock",
        "impliesClause",
        "dnfClause",
        "cnfClause",
        "group",
    ]

    EOF = Token.EOF
    ISEVENTUALLYFOLLOWED = 1
    ISDIRECTLYFOLLOWED = 2
    ISCONCURRENT = 3
    ISSTARTTOKEN = 4
    ISENDTOKEN = 5
    ISCONTAINED = 6
    LPAR = 7
    RPAR = 8
    ANY = 9
    ALL = 10
    LCBRACKET = 11
    RCBRACKET = 12
    SEMICOLON = 13
    COMMA = 14
    GROUPINVERSE = 15
    EQUALS = 16
    LT = 17
    GT = 18
    AND = 19
    OR = 20
    NOT = 21
    IMPLIES = 22
    NUMBER = 23
    WS = 24
    ACTIVITY = 25

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class StartContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(vqlParser.EOF, 0)

        def query(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(vqlParser.QueryContext)
            else:
                return self.getTypedRuleContext(vqlParser.QueryContext, i)

        def getRuleIndex(self):
            return vqlParser.RULE_start

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStart"):
                listener.enterStart(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStart"):
                listener.exitStart(self)

    def start(self):
        localctx = vqlParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << vqlParser.LPAR)
                    | (1 << vqlParser.ANY)
                    | (1 << vqlParser.ALL)
                    | (1 << vqlParser.GROUPINVERSE)
                    | (1 << vqlParser.NOT)
                    | (1 << vqlParser.ACTIVITY)
                )
            ) != 0:
                self.state = 28
                self.query()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(vqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(vqlParser.SEMICOLON, 0)

        def logicBlock(self):
            return self.getTypedRuleContext(vqlParser.LogicBlockContext, 0)

        def getRuleIndex(self):
            return vqlParser.RULE_query

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuery"):
                listener.enterQuery(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuery"):
                listener.exitQuery(self)

    def query(self):
        localctx = vqlParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.logicBlock()
            self.state = 37
            self.match(vqlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicBlockContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.neg = None  # Token

        def leaf(self):
            return self.getTypedRuleContext(vqlParser.LeafContext, 0)

        def dnfClause(self):
            return self.getTypedRuleContext(vqlParser.DnfClauseContext, 0)

        def cnfClause(self):
            return self.getTypedRuleContext(vqlParser.CnfClauseContext, 0)

        def impliesClause(self):
            return self.getTypedRuleContext(vqlParser.ImpliesClauseContext, 0)

        def LPAR(self):
            return self.getToken(vqlParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(vqlParser.RPAR, 0)

        def NOT(self):
            return self.getToken(vqlParser.NOT, 0)

        def getRuleIndex(self):
            return vqlParser.RULE_logicBlock

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogicBlock"):
                listener.enterLogicBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogicBlock"):
                listener.exitLogicBlock(self)

    def logicBlock(self):
        localctx = vqlParser.LogicBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_logicBlock)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.leaf()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.dnfClause()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.cnfClause()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.impliesClause()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 43
                localctx.neg = self.match(vqlParser.NOT)
                self.state = 44
                self.match(vqlParser.LPAR)
                self.state = 45
                self.leaf()
                self.state = 46
                self.match(vqlParser.RPAR)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 48
                localctx.neg = self.match(vqlParser.NOT)
                self.state = 49
                self.match(vqlParser.LPAR)
                self.state = 50
                self.dnfClause()
                self.state = 51
                self.match(vqlParser.RPAR)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 53
                localctx.neg = self.match(vqlParser.NOT)
                self.state = 54
                self.match(vqlParser.LPAR)
                self.state = 55
                self.cnfClause()
                self.state = 56
                self.match(vqlParser.RPAR)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 58
                localctx.neg = self.match(vqlParser.NOT)
                self.state = 59
                self.match(vqlParser.LPAR)
                self.state = 60
                self.impliesClause()
                self.state = 61
                self.match(vqlParser.RPAR)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BQueryOpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return vqlParser.RULE_bQueryOp

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class CONCURRENTOPContext(BQueryOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.BQueryOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISCONCURRENT(self):
            return self.getToken(vqlParser.ISCONCURRENT, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCONCURRENTOP"):
                listener.enterCONCURRENTOP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCONCURRENTOP"):
                listener.exitCONCURRENTOP(self)

    class DIRECTLYFOLLOWSOPContext(BQueryOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.BQueryOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISDIRECTLYFOLLOWED(self):
            return self.getToken(vqlParser.ISDIRECTLYFOLLOWED, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDIRECTLYFOLLOWSOP"):
                listener.enterDIRECTLYFOLLOWSOP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDIRECTLYFOLLOWSOP"):
                listener.exitDIRECTLYFOLLOWSOP(self)

    class EVENTUALLYFOLLOWSOPContext(BQueryOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.BQueryOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISEVENTUALLYFOLLOWED(self):
            return self.getToken(vqlParser.ISEVENTUALLYFOLLOWED, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEVENTUALLYFOLLOWSOP"):
                listener.enterEVENTUALLYFOLLOWSOP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEVENTUALLYFOLLOWSOP"):
                listener.exitEVENTUALLYFOLLOWSOP(self)

    def bQueryOp(self):
        localctx = vqlParser.BQueryOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bQueryOp)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [vqlParser.ISDIRECTLYFOLLOWED]:
                localctx = vqlParser.DIRECTLYFOLLOWSOPContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.match(vqlParser.ISDIRECTLYFOLLOWED)
                pass
            elif token in [vqlParser.ISEVENTUALLYFOLLOWED]:
                localctx = vqlParser.EVENTUALLYFOLLOWSOPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(vqlParser.ISEVENTUALLYFOLLOWED)
                pass
            elif token in [vqlParser.ISCONCURRENT]:
                localctx = vqlParser.CONCURRENTOPContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.match(vqlParser.ISCONCURRENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UQueryOpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return vqlParser.RULE_uQueryOp

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class CONTAINSOPContext(UQueryOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.UQueryOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISCONTAINED(self):
            return self.getToken(vqlParser.ISCONTAINED, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCONTAINSOP"):
                listener.enterCONTAINSOP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCONTAINSOP"):
                listener.exitCONTAINSOP(self)

    class STARTOPContext(UQueryOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.UQueryOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISSTARTTOKEN(self):
            return self.getToken(vqlParser.ISSTARTTOKEN, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSTARTOP"):
                listener.enterSTARTOP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSTARTOP"):
                listener.exitSTARTOP(self)

    class ENDOPContext(UQueryOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.UQueryOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISENDTOKEN(self):
            return self.getToken(vqlParser.ISENDTOKEN, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterENDOP"):
                listener.enterENDOP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitENDOP"):
                listener.exitENDOP(self)

    def uQueryOp(self):
        localctx = vqlParser.UQueryOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_uQueryOp)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [vqlParser.ISCONTAINED]:
                localctx = vqlParser.CONTAINSOPContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(vqlParser.ISCONTAINED)
                pass
            elif token in [vqlParser.ISSTARTTOKEN]:
                localctx = vqlParser.STARTOPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(vqlParser.ISSTARTTOKEN)
                pass
            elif token in [vqlParser.ISENDTOKEN]:
                localctx = vqlParser.ENDOPContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.match(vqlParser.ISENDTOKEN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QOpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return vqlParser.RULE_qOp

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class LESSOPContext(QOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.QOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LT(self):
            return self.getToken(vqlParser.LT, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLESSOP"):
                listener.enterLESSOP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLESSOP"):
                listener.exitLESSOP(self)

    class EQUALSOPContext(QOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.QOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EQUALS(self):
            return self.getToken(vqlParser.EQUALS, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEQUALSOP"):
                listener.enterEQUALSOP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEQUALSOP"):
                listener.exitEQUALSOP(self)

    class GREATEROPContext(QOpContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.QOpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def GT(self):
            return self.getToken(vqlParser.GT, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGREATEROP"):
                listener.enterGREATEROP(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGREATEROP"):
                listener.exitGREATEROP(self)

    def qOp(self):
        localctx = vqlParser.QOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_qOp)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [vqlParser.EQUALS]:
                localctx = vqlParser.EQUALSOPContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(vqlParser.EQUALS)
                pass
            elif token in [vqlParser.LT]:
                localctx = vqlParser.LESSOPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(vqlParser.LT)
                pass
            elif token in [vqlParser.GT]:
                localctx = vqlParser.GREATEROPContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(vqlParser.GT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QuantifierContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None  # QOpContext
            self.number = None  # Token

        def qOp(self):
            return self.getTypedRuleContext(vqlParser.QOpContext, 0)

        def NUMBER(self):
            return self.getToken(vqlParser.NUMBER, 0)

        def getRuleIndex(self):
            return vqlParser.RULE_quantifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuantifier"):
                listener.enterQuantifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuantifier"):
                listener.exitQuantifier(self)

    def quantifier(self):
        localctx = vqlParser.QuantifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_quantifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx.op = self.qOp()
            self.state = 81
            localctx.number = self.match(vqlParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return vqlParser.RULE_expression

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class BinaryExpressionContext(ExpressionContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.ExpressionContext
            super().__init__(parser)
            self.left = None  # Token
            self.op = None  # BQueryOpContext
            self.right = None  # GroupContext
            self.copyFrom(ctx)

        def ACTIVITY(self, i: int = None):
            if i is None:
                return self.getTokens(vqlParser.ACTIVITY)
            else:
                return self.getToken(vqlParser.ACTIVITY, i)

        def bQueryOp(self):
            return self.getTypedRuleContext(vqlParser.BQueryOpContext, 0)

        def group(self):
            return self.getTypedRuleContext(vqlParser.GroupContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBinaryExpression"):
                listener.enterBinaryExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBinaryExpression"):
                listener.exitBinaryExpression(self)

    class UnaryExpressionContext(ExpressionContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.ExpressionContext
            super().__init__(parser)
            self.activity = None  # GroupContext
            self.op = None  # UQueryOpContext
            self.copyFrom(ctx)

        def group(self):
            return self.getTypedRuleContext(vqlParser.GroupContext, 0)

        def uQueryOp(self):
            return self.getTypedRuleContext(vqlParser.UQueryOpContext, 0)

        def ACTIVITY(self):
            return self.getToken(vqlParser.ACTIVITY, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUnaryExpression"):
                listener.enterUnaryExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUnaryExpression"):
                listener.exitUnaryExpression(self)

    def expression(self):
        localctx = vqlParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                localctx = vqlParser.UnaryExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                localctx.activity = self.group()
                self.state = 84
                localctx.op = self.uQueryOp()
                pass

            elif la_ == 2:
                localctx = vqlParser.UnaryExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                localctx.activity = self.match(vqlParser.ACTIVITY)
                self.state = 87
                localctx.op = self.uQueryOp()
                pass

            elif la_ == 3:
                localctx = vqlParser.BinaryExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                localctx.left = self.match(vqlParser.ACTIVITY)
                self.state = 89
                localctx.op = self.bQueryOp()
                self.state = 90
                localctx.right = self.group()
                pass

            elif la_ == 4:
                localctx = vqlParser.BinaryExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                localctx.left = self.group()
                self.state = 93
                localctx.op = self.bQueryOp()
                self.state = 94
                localctx.right = self.match(vqlParser.ACTIVITY)
                pass

            elif la_ == 5:
                localctx = vqlParser.BinaryExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                localctx.left = self.match(vqlParser.ACTIVITY)
                self.state = 97
                localctx.op = self.bQueryOp()
                self.state = 98
                localctx.right = self.match(vqlParser.ACTIVITY)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LeafContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return vqlParser.RULE_leaf

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class QuantifiedExpressionContext(LeafContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.LeafContext
            super().__init__(parser)
            self.exp = None  # ExpressionContext
            self.quant = None  # QuantifierContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(vqlParser.ExpressionContext, 0)

        def quantifier(self):
            return self.getTypedRuleContext(vqlParser.QuantifierContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuantifiedExpression"):
                listener.enterQuantifiedExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuantifiedExpression"):
                listener.exitQuantifiedExpression(self)

    class SimpleExpressionContext(LeafContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a vqlParser.LeafContext
            super().__init__(parser)
            self.exp = None  # ExpressionContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(vqlParser.ExpressionContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSimpleExpression"):
                listener.enterSimpleExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSimpleExpression"):
                listener.exitSimpleExpression(self)

    def leaf(self):
        localctx = vqlParser.LeafContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_leaf)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                localctx = vqlParser.SimpleExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                localctx.exp = self.expression()
                pass

            elif la_ == 2:
                localctx = vqlParser.QuantifiedExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                localctx.exp = self.expression()
                self.state = 104
                localctx.quant = self.quantifier()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImplyBlockContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.neg = None  # Token

        def leaf(self):
            return self.getTypedRuleContext(vqlParser.LeafContext, 0)

        def LPAR(self):
            return self.getToken(vqlParser.LPAR, 0)

        def dnfClause(self):
            return self.getTypedRuleContext(vqlParser.DnfClauseContext, 0)

        def RPAR(self):
            return self.getToken(vqlParser.RPAR, 0)

        def cnfClause(self):
            return self.getTypedRuleContext(vqlParser.CnfClauseContext, 0)

        def impliesClause(self):
            return self.getTypedRuleContext(vqlParser.ImpliesClauseContext, 0)

        def NOT(self):
            return self.getToken(vqlParser.NOT, 0)

        def getRuleIndex(self):
            return vqlParser.RULE_implyBlock

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterImplyBlock"):
                listener.enterImplyBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitImplyBlock"):
                listener.exitImplyBlock(self)

    def implyBlock(self):
        localctx = vqlParser.ImplyBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_implyBlock)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 7, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.leaf()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(vqlParser.LPAR)
                self.state = 110
                self.dnfClause()
                self.state = 111
                self.match(vqlParser.RPAR)
                pass
